--- a/art.html
+++ b/art.html
@@ -8,29 +8,87 @@
     <link href="dist/css/lightbox.css" rel="stylesheet" />
     <title>Personal Art Gallery</title>
 </head>
+<!-- alt-text taken from ChatGPT -->
+<!-- Source code taken from Week 11 Data Attributes from Jackie -->
+<!-- lightboximage class and span caption code is taken from stackoverflow:https://stackoverflow.com/questions/47039672/how-to-add-caption-underneath-imagethe-image-is-used-for-a-lightbox -->
+<!-- Navigation bar code taken from Flex homework -->
 <body>
 <header>
-    <h1>Art Gallery Showcase</h1>
-    <p>Here are my top favorite pieces of art from a variety of periods.</p>
+    <a class = "skip" href="#skip">Skip to Main Content</a>
+    <nav clas="navbar">
+        <div class="nav_container">
+        <a href="home.html" class="logo_link">
+        <img src="images/logo.png" alt="Logo for Lines of Thought featuring a black Ionic column on the left and stacked serif text reading “Lines of Thought” on the right." id = "logo">
+        </a>
+        <ul class="nav_links">
+          <li class="nav_item"><a href="home.html">Home</a></li>
+          <li class="nav_item"><a href="art.html">Art</a></li>
+          <li class="nav_item"><a href="sculpture.html">Sculpture</a></li>
+          <li class="nav_item"><a href="architecture.html">Architecture</a></li>
+        </ul>
+    </div>
+    </nav>
 </header>
-<main class="gallery">
-<a href = "images/Signac_art.jpg" target="_blank" data-lightbox="art" data-title="Notre-Dame-de-la-Garde (La Bonne-Mère), Marseilles by Paul Signac" data-alt="fancy tea mug with black_tea">
-    <img src="images/Signac_art.jpg" width = "200" alt="fancy tea mug with black_tea">
-<a href = "images/Klimt_art.jpg" target="_blank" data-lightbox="art" data-title="The Tree of Life, Stoclet Frieze by Gustav Klimt" data-alt="fancy tea mug with black_tea">
-    <img src="images/Klimt_art.jpg" width = "200" alt="fancy tea mug with black_tea">
-<a href = "images/Lautrec_art.jpg" target="_blank" data-lightbox="art" data-title="​​Moulin Rouge by Henri de Toulouse-Lautrec" data-alt="fancy tea mug with black_tea">
-    <img src="images/Lautrec_art.jpg" width = "200" alt="fancy tea mug with black_tea">
-<a href = "images/Whistler_art.jpg" target="_blank" data-lightbox="art" data-title="Nocturne in Black and Gold: The Falling Rocket by James Whistler" data-alt="fancy tea mug with black_tea">
-    <img src="images/Whistler_art.jpg" width = "200" alt="fancy tea mug with black_tea">
-<a href = "images/Vermeer_art.jpg" target="_blank" data-lightbox="art" data-title="The Art of Painting by Johannes Vermeer" data-alt="fancy tea mug with black_tea">
-    <img src="images/Vermeer_art.jpg" width = "200" alt="fancy tea mug with black_tea">
-<a href = "images/LasMeninas_art.jpg" target="_blank" data-lightbox="art" data-title="Las Meninas by Diego Velázquez" data-alt="fancy tea mug with black_tea">
-    <img src="images/LasMeninas_art.jpg" width = "200" alt="fancy tea mug with black_tea">
-<a href = "images/Nighthawks_art.jpg" target="_blank" data-lightbox="art" data-title="Nighthawks by Edward Hopper" data-alt="fancy tea mug with black_tea">
-    <img src="images/Nighthawks_art.jpg" width = "200" alt="fancy tea mug with black_tea">
-<a href = "images/VanGogh_art.jpg" target="_blank" data-lightbox="art" data-title="Café Terrace at Night by Vincent Van Gogh" data-alt="fancy tea mug with black_tea">
-    <img src="images/VanGogh_art.jpg" width = "200" alt="fancy tea mug with black_tea">
+<main id="skip" class="gallery">
+<h1>Art Gallery Showcase</h1>
+<p>Here are my top favorite pieces of art from a variety of periods.</p>
+<div class="gallery_grid">
+<div class="gallery_item">
+<a class="lightboximage" href = "images/Signac_art.jpg" target="_blank" data-lightbox="art" data-title="Notre-Dame-de-la-Garde (La Bonne-Mère), Marseilles by Paul Signac" data-alt="Pointillist painting of sailboats in a Marseille harbor with Notre-Dame-de-la-Garde on a hill in the background">
+    <img src="images/Signac_art.jpg" width = "200" alt="Pointillist painting of sailboats in a Marseille harbor with Notre-Dame-de-la-Garde on a hill in the background.">
+</a>
+    <span class="caption">This artwork uses a mixture of pink, blue, and red colors effectively. His strokes are mosaic-like arrangements that create a bold and distinctive look of the entrance to the port that faces the hill of Notre-Dame-de-la-Garde church. This is one of my favorite paintings due to its usage of colors and strokes.</span>
+</div>
+<div class="gallery_item">
+<a class="lightboximage" href = "images/Klimt_art.jpg" target="_blank" data-lightbox="art" data-title="The Tree of Life, Stoclet Frieze by Gustav Klimt" data-alt="Stylized tree with swirling branches, flanked by a robed woman and a couple in a golden embrace.">
+    <img src="images/Klimt_art.jpg" width = "200" alt="Stylized tree with swirling branches, flanked by a robed woman and a couple in a golden embrace.">
+</a>
+    <span class="caption">This artwork is a symbolic image of the tree and the only landscape painting that Klimt has done. This tree is characterized by its swirling branches with figures on opposite sides. This is one of my favorite paintings because it may seem simple but it prompts the viewer to look closer and examine its intricacies.</span>
+</div>
+<div class="gallery_item">
+<a class="lightboximage" href = "images/Lautrec_art.jpg" target="_blank" data-lightbox="art" data-title="​​Moulin Rouge by Henri de Toulouse-Lautrec" data-alt="Lively cabaret scene with dancers and patrons, featuring an acid-green-faced figure at the right edge of the canvas.">
+    <img src="images/Lautrec_art.jpg" width = "200" alt="Lively cabaret scene with dancers and patrons, featuring an acid-green-faced figure at the right edge of the canvas.">
+</a>
+    <span class="caption">It is a painting that depicts the legendary nightclub that is filled in its regulars in Paris. At the right edge of the painting, the singer May Milton pops out with her harshly lit face. The original canvas was cut down since the painting was hard to sell due to the singer’s strange appearance. I like this painting because it draws your attention to the singer and makes me wonder why the artist made the choice for the singer to stand out in the nightclub.</span>
+</div>
+<div class="gallery_item">
+    <a class="lightboximage" href = "images/Whistler_art.jpg" target="_blank" data-lightbox="art" data-title="Nocturne in Black and Gold: The Falling Rocket by James Whistler" data-alt="Abstract night scene with dark tones, bursts of gold, and a falling firework over a shadowy crowd.">
+    <img src="images/Whistler_art.jpg" width = "200" alt="Abstract night scene with dark tones, bursts of gold, and a falling firework over a shadowy crowd.">
+</a>
+    <span class="caption">It is the painting that depicts a fireworks display in London’s Cremorne Gardens. This artwork was the centerpiece of the issue between the artist and art critic, John Ruskin that was eventually won by Whistler. I like this piece because it depicts the mood when seeing the fireworks in the night.</span>
+</div>
+<div class="gallery_item">
+    <a class="lightboximage" href = "images/Vermeer_art.jpg" target="_blank" data-lightbox="art" data-title="The Art of Painting by Johannes Vermeer" data-alt="An artist paints a woman in a blue dress with a laurel wreath, set in a detailed, sunlit studio.">
+    <img src="images/Vermeer_art.jpg" width = "200" alt="An artist paints a woman in a blue dress with a laurel wreath, set in a detailed, sunlit studio.">
+</a>
+    <span class="caption">It is an artwork that depicts an artist painting his model. Vermeer is known for his depictions of everyday life in the Netherlands. I like this artwork because it provides a glimpse of how an artist does his work.</span>
+</div>
+<div class="gallery_item">
+    <a class="lightboximage" href = "images/LasMeninas_art.jpg" target="_blank" data-lightbox="art" data-title="Las Meninas by Diego Velázquez" data-alt="A royal studio scene with a young princess, her attendants, and the artist Velázquez painting at his easel.">
+    <img src="images/LasMeninas_art.jpg" width = "200" alt="A royal studio scene with a young princess, her attendants, and the artist Velázquez painting at his easel.">
+</a>
+    <span class="caption">It is a painting that depicts the princess of Spain visiting her parents, who are having their portrait painted. It is considered one of the masterpieces in the Spanish Baroque era. I like this artwork because there are several layers of composition in this piece that can be examined.</span>
+</div>
+<div class="gallery_item">
+<a class="lightboximage" href = "images/Nighthawks_art.jpg" target="_blank" data-lightbox="art" data-title="Nighthawks by Edward Hopper" data-alt="Late-night diner scene with three customers and a server under bright interior light, surrounded by empty streets.">
+    <img src="images/Nighthawks_art.jpg" width = "200" alt="Late-night diner scene with three customers and a server under bright interior light, surrounded by empty streets.">
+</a>
+    <span class="caption">It is a painting that depicts diners who are lost in thought and not actively engaged with the conversation at hand. Hopper was inspired by a restaurant he saw in New York. This is one of my favorite paintings because it captures the serene moment in the city during the night after the day’s work has been completed.</span>
+</div>
+<div class="gallery_item">
+<a class="lightboximage" href = "images/VanGogh_art.jpg" target="_blank" data-lightbox="art" data-title="Café Terrace at Night by Vincent Van Gogh" data-alt="Outdoor café glowing under a starry night sky, with figures seated at tables along a cobblestone street.">
+    <img src="images/VanGogh_art.jpg" width = "200" alt="Outdoor café glowing under a starry night sky, with figures seated at tables along a cobblestone street.">
+</a>
+    <span class="caption">It is a painting of a cafe taken at night. This painting is characterized by Van Gogh’s relaxed mood with the cafe’s luminescent yellow light in contrast to the starry sky above. This is one of my favorite paintings because I can feel the night life of the cafe as a spectator although I am not physically present. In addition, this cafe still exists and is renamed as Cafe Van Gogh.</span>
+</div>
+</div>
 <script src="dist/js/lightbox-plus-jquery.js"></script>
 </main>
+<footer class="site_footer">
+    <div class="footer_container">
+      <p>&copy; 2025 Jeanette Ahn · Lines of Thought</p>
+    </div>
+</footer>
 </body>
+<script src="dist/js/lightbox-plus-jquery.js"></script>
 </html>
