--- a/home.html
+++ b/home.html
@@ -7,15 +7,38 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="dist/css/lightbox.css" rel="stylesheet" />
     <title>Personal Art Gallery</title>
+    <!-- Modified from ChatGPT -->
+    <!-- Navigation bar code taken from Flex homework -->
 </head>
-<body>
+<body class="flex-container">
 <header>
-<h1>Welcome to My Gallery!</h1>
+<a class = "skip" href="#skip">Skip to Main Content</a>
+    <nav clas="navbar">
+      <div class="nav_container">
+      <a href="home.html" class="logo_link">
+      <img src="images/logo.png" alt="Logo for Lines of Thought featuring a black Ionic column on the left and stacked serif text reading “Lines of Thought” on the right." id = "logo">
+      </a>
+      <ul class="nav_links">
+        <li class="nav_item"><a href="home.html">Home</a></li>
+        <li class="nav_item"><a href="art.html">Art</a></li>
+        <li class="nav_item"><a href="sculpture.html">Sculpture</a></li>
+        <li class="nav_item"><a href="architecture.html">Architecture</a></li>
+      </ul>
+    </div>
+  </nav>
 </header>
-<main>
-<p>Hi, I'm Jeanette Ahn. In this collection, I've curated some of my favorite pieces of art, architecture, and sculpture from throughout art history.</p>
-<p>Art history is the study of visual art over time, exploring how cultural, social, and historical factors shape its evolution.</p> <p>I've also included my personal reflections on why these works resonate with me and their significance within the broader context of art history.</p>
-<script src="dist/js/lightbox-plus-jquery.js"></script>
+<main id="skip">
+<h1>Welcome to My Gallery!</h1>
+<p>I'm Jeanette Ahn, and this is a personal archive of art, architecture, and sculpture that has moved me—across time, style, and place.</p>
+<p>Each piece you’ll find here is more than a masterpiece; it’s a moment I’ve chosen to hold onto. I’ve included my reflections alongside each work to share how it resonates with me and how it fits into the broader story of art history—how form, emotion, and time meet.</p>
+<p>This is not just a gallery. It’s a conversation across centuries.</p>
+<p>Thank you for visiting.</p>
 </main>
+<footer class="site_footer">
+<div class="footer_container">
+  <p>&copy; 2025 Jeanette Ahn · Lines of Thought</p>
+</div>
+</footer>
 </body>
+<script src="dist/js/lightbox-plus-jquery.js"></script>
 </html>
