--- a/art.html
+++ b/art.html
@@ -22,7 +22,7 @@
         </a>
         <ul class="nav_links">
           <li class="nav_item"><a href="home.html">Home</a></li>
-          <li class="nav_item"><a href="art.html">Art</a></li>
+          <li class="nav_item"><a href="art.html" class="active">Art</a></li>
           <li class="nav_item"><a href="sculpture.html">Sculpture</a></li>
           <li class="nav_item"><a href="architecture.html">Architecture</a></li>
         </ul>
@@ -30,7 +30,7 @@
     </nav>
 </header>
 <main id="skip" class="gallery">
-<h1>Art Gallery Showcase</h1>
+<h1><span class="typewriter">Art Gallery Showcase</span></h1>
 <p>Here are my top favorite pieces of art from a variety of periods.</p>
 <div class="gallery_grid">
 <div class="gallery_item">
@@ -91,4 +91,5 @@
 </footer>
 </body>
 <script src="dist/js/lightbox-plus-jquery.js"></script>
+
 </html>
