--- a/architecture.html
+++ b/architecture.html
@@ -24,13 +24,13 @@
           <li class="nav_item"><a href="home.html">Home</a></li>
           <li class="nav_item"><a href="art.html">Art</a></li>
           <li class="nav_item"><a href="sculpture.html">Sculpture</a></li>
-          <li class="nav_item"><a href="architecture.html">Architecture</a></li>
+          <li class="nav_item"><a href="architecture.html" class="active">Architecture</a></li>
         </ul>
     </div>
     </nav>
 </header>
 <main id="skip" class="gallery">
-<h1>Architecture Gallery Showcase</h1>
+<h1><span class="typewriter">Architecture Gallery Showcase</span></h1>
 <p>Here are my top favorite pieces of architecture from a variety of periods.</p>
 <div class="gallery_grid">
     <div class="gallery_item">
@@ -91,4 +91,5 @@
 </footer>
 </body>
 <script src="dist/js/lightbox-plus-jquery.js"></script>
+
 </html>
